# sentinel

./: .gitignore  .pylintrc  LICENSE  README.rst  examples.py  pyproject.toml  sentinel.py  setup.py  test_sentinel.py
.github/workflows/: python-package.yml  python-publish.yml
