[tool.poetry]
name = "sentinel"
version = "0.2.1-alpha.0"
description = "Create sentinel objects, akin to None, NotImplemented, Ellipsis"
authors = ["Eddie Antonio Santos <easantos@ualberta.ca>"]
license = "MIT"
readme = "README.rst"
homepage = "https://github.com/eddieantonio/sentinel"
repository = "https://github.com/eddieantonio/sentinel.git"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[tool.poetry.dependencies]
python = "^3.6"

[tool.poetry.dev-dependencies]
pytest = "^6.2.1"
mypy = "^0.790"
black = "^20.8b1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
