[tool.poetry]
name = "sentinel"
version = "1.0.0"
description = "Create sentinel objects, akin to None, NotImplemented, Ellipsis"
authors = ["Eddie Antonio Santos <hello@eddieantonio.ca>"]
license = "MIT"
readme = "README.rst"
homepage = "https://github.com/eddieantonio/sentinel"
repository = "https://github.com/eddieantonio/sentinel.git"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[tool.poetry.dependencies]
python = "^3.6"

# Optional dependency:
varname = {version = ">=0.1", optional = true}

[tool.poetry.extras]
varname = ["varname"]

[tool.poetry.dev-dependencies]
pytest = "^6.2.1"
mypy = "^0.971"
black = "^20.8b1"
toml = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
